<resources>
    <string name="app_name">Green AI</string>
    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Close Drawer</string>
    <string name="cabbage_desc">Comprising several cultivars of Brassica oleracea, is a leafy green, red (purple), or white (pale green) biennial plant grown as an annual vegetable crop for its dense-leaved heads.<b>\n\nSuggestions:</b>\nCabbages need full sun – at least six to eight hours of direct sunlight per day. It is best to water in the morning and at the base of the plant (soil level) keeping the foliage dry.</string>
    <string name="broccoli_desc">(Brassica oleracea var. italica) is an edible green plant in the cabbage family (family Brassicaceae, genus Brassica), A cool weather vegetable that is grown for harvest of large, tight, terminal heads of green flower buds at the ends of thick edible stems.<b>\n\nSuggestions:</b>\nPlant your broccoli where it will get least 6 hours of sun daily and has fertile, well-drained, moist soil with plenty of organic matter. Keep soil moist by giving broccoli plants 1 to 1.5 inches of water per week. </string>
    <string name="bokchoy_desc">(Brassica rapa subsp. chinensis) is a type of Chinese cabbage, used as food. Chinensis varieties do not form heads and have green leaf blades with lighter bulbous bottoms instead, forming a cluster reminiscent of mustard greens. It has a flavor between spinach and water chestnuts but is slightly sweeter, with a mildly peppery undertone. The green leaves have a stronger flavor than the white bulb.<b>\n\nSuggestions:</b>\nKeep soil cool and moist and to further discourage bolting when growing bok choy as a spring crop, try planting bok choy in partial shade and keep it well-watered. Growing the smaller or “baby” varieties of bok choy can also help as they mature 10 to 14 days sooner than the standard size.</string>
    <string name="lettuce_desc">(Lactuca sativa) is an annual plant of the daisy family, Asteraceae. It is most often grown as a leaf vegetable, but sometimes for its stem and seeds. Lettuce is most often used for salads, although it is also seen in other kinds of food, such as soups, sandwiches and wraps.<b>\n\nSuggestions:</b>\nPlants have loose heads with thick leathery leaves, dark green color and are eaten raw. Lettuce grows best in loose, cool soil with good drainage. The addition of organic materials, such as compost or manure, will increase drainage, provide essential nutrients and improve your lettuce growing conditions. </string>
    <string name="select_image_source">Select Image Source</string>
</resources>
