<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:id="@+id/fragment_container">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/back">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/aldrich"
                        android:text="@string/app_name"
                        android:visibility="gone"
                        android:textSize="30sp" />



                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gradient">

                    <LinearLayout
                        android:id="@+id/featured_bg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/gradient"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="Featured Vegetables"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="25sp" />


                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:elevation="8dp"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="@color/yellow"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bokchoy"
                        tools:srcCompat="@drawable/bokchoy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bokchoy"
                        android:textSize="20sp"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/baloo"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bokchoy_desc"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:elevation="8dp"
                    android:backgroundTint="@color/yellow"
                    android:background="@drawable/roundstyle"
                    android:layout_margin="10dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/broccoli" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:text="Broccoli"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/broccoli_desc"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:elevation="8dp"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="@color/yellow"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:src="@drawable/cabbage"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cabbage"
                        android:textSize="20sp"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/baloo"/>



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cabbage_desc"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:elevation="8dp"
                    android:background="@drawable/roundstyle"
                    android:backgroundTint="@color/yellow"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:src="@drawable/lettuce"
                        android:scaleType="centerCrop"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/baloo"
                        android:text="Lettuce"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lettuce_desc"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>